--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -104,11 +104,13 @@ html body #wrap{margin:30px auto 80px;}html body #wrap aside{width:150px;height:
 html body #wrap aside ul li a{color:#eee;text-decoration:none;}html body #wrap aside ul li a:hover{filter:alpha(opacity=80);opacity:0.8;}
 html body #wrap section{margin-left:150px;text-align:left;}html body #wrap section div.container{margin-left:30px;max-width:900px;margin-right:10px;display:inline-block;vertical-align:top;}html body #wrap section div.container article{max-width:800px;background-color:white;border-radius:6px;margin-bottom:20px;padding:15px;text-shadow:1px 1px 1px #fff;color:black;}html body #wrap section div.container article h3 a{font-size:24px;color:#8b0000;}
 html body #wrap section div.container article .meta{margin:10px 0;color:#c0c0c0;border-bottom:1px solid #eee;}
-html body #wrap section div.container article .content h1,html body #wrap section div.container article .content * h1,html body #wrap section div.container article .content h2,html body #wrap section div.container article .content * h2{font-size:20px;}
-html body #wrap section div.container article .content h3,html body #wrap section div.container article .content * h3,html body #wrap section div.container article .content h4,html body #wrap section div.container article .content * h4{font-size:16px;}
+html body #wrap section div.container article .content h1{font-size:20px;}
+html body #wrap section div.container article .content h2{font-size:18px;}
+html body #wrap section div.container article .content h3{font-size:16px;}
+html body #wrap section div.container article .content h4{font-size:14px;}
 html body #wrap section div.container article .content p{margin-bottom:15px;}
 html body #wrap section div.container article .content pre{border:1px dashed #ddd;padding:10px;margin:10px auto;}
-html body #wrap section div.container article .content * *{max-width:900px;}
+html body #wrap section div.container article .content img{max-width:700px;}
 html body #wrap section div.container article .content li{list-style-type:square;margin-left:15px;}
 html body #wrap section .elevator-container{-webkit-transition:margin 0.4s ease-in-out;-moz-transition:margin 0.4s ease-in-out;-ms-transition:margin 0.4s ease-in-out;-o-transition:margin 0.4s ease-in-out;transition:margin 0.4s ease-in-out;position:fixed;max-height:200px;max-width:284px;overflow:auto;right:0;bottom:0;background-color:white;border-radius:5px 0 0 5px;padding:10px 0;}html body #wrap section .elevator-container .elevator li{padding:0px 10px;font-size:14px;}html body #wrap section .elevator-container .elevator li a{color:#c0c0c0;}
 html body #wrap section .elevator-container .elevator li.ele-current{background-color:rgba(220, 220, 220, 0.8);}html body #wrap section .elevator-container .elevator li.ele-current a{color:#8b0000;}
