--- a/static/less/layout.less
+++ b/static/less/layout.less
@@ -108,11 +108,17 @@ html {
                                 border-bottom: 1px solid #eee;
                             }
                             .content {
-                                h1, * h1, h2, * h2 {
+                                h1 {
                                     font-size: 20px;
                                 }
-                                h3, * h3, h4, * h4 {
+                                h2 {
+                                    font-size: 18px;
+                                }
+                                h3 {
                                     font-size: 16px;
+                                }
+                                h4 {
+                                    font-size: 14px;
                                 }
                                 p {
                                     margin-bottom: 15px;
@@ -122,8 +128,8 @@ html {
                                     padding: 10px;
                                     margin: 10px auto;
                                 }
-                                * * {
-                                    max-width: 900px;
+                                img {
+                                    max-width: 700px;
                                 }
                                 li {
                                     list-style-type: square;
